# docs/swagger.json
@@ -8,9 +8,8 @@
         "version": "1.0"
     },
     "paths": {
-        "/skill/all/": {
-            "get": {
-                "description": "Getting Skill by Id in detail",
+        "/skill": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -20,7 +19,18 @@
                 "tags": [
                     "Skills"
                 ],
-                "summary": "Getting Skill by Id",
+                "summary": "Adding Skill",
+                "parameters": [
+                    {
+                        "description": "Request of Creating Skill Object",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entitySkill.Skill"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -84,6 +94,53 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        },
+        "/skills": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Skills"
+                ],
+                "summary": "Getting all Skill",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "entitySkill.Skill": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         }
